--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,11 +10,11 @@
 name: OpenWrt-20200107
 
 on:
-  # push:
-  #   branches: 
-  #     - master
-  # schedule:
-  #   - cron: 0 20 * * *
+  push:
+    branches: 
+      - master
+  schedule:
+    - cron: 0 20 * * *
   # release:
   #   types: [published]
 
