--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -175,15 +175,14 @@ jobs:
           CONFIG_PACKAGE_luci-app-nft-qos=y
           CONFIG_PACKAGE_luci-app-pptp-server=y
           CONFIG_PACKAGE_luci-app-ramfree=y
-          CONFIG_PACKAGE_luci-proto-bonding=y
-          CONFIG_PACKAGE_luci-theme-argon=y
-          # EOF
+          EOF
 
           # LuCI主题:
-          # cat >> .config <<EOF
-          # CONFIG_PACKAGE_luci-theme-argon=y
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-theme-argon=y
           # CONFIG_PACKAGE_luci-theme-netgear=y
-          # EOF
+          CONFIG_PACKAGE_luci-proto-bonding=y
+          EOF
 
           # 常用软件包:
           cat >> .config <<EOF
